# skills-distribution-rag

./: Dockerfile  docker-compose.yml
src/: alembic.ini  pyproject.toml
src/app/: main.py
src/app/application/use_cases/: create_embeddings.py  create_skills.py
src/app/controllers/api/: router.py
src/app/domain/: dto.py
src/app/domain/ports/: repository.py  uow.py
src/app/domain/ports/agent/: main.py
src/app/domain/ports/cache/: main.py
src/app/infrastructure/adapters/: repository.py  uow.py
src/app/infrastructure/adapters/agent/: main.py
src/app/infrastructure/adapters/agent/prompts/: extract.txt  normalize.txt
src/app/infrastructure/adapters/cache/: main.py
src/app/infrastructure/persistence/alembic/: env.py
src/app/infrastructure/persistence/alembic/versions/: 2025_12_29_1219-e16e64bcb50d_initial_migrations.py  2025_12_31_1521-319f035ebf60_add_title_vector.py
src/app/infrastructure/persistence/models/: __init__.py  job_post.py
src/app/setup/: config.py
src/app/setup/ioc/: provider.py
